@@ -61,6 +61,9 @@ Version 3.0.0
   + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
     superseded with a single HWLOC_PCI_LOCALITY since 2.0.
 * Misc
+  + hwloc_topology_allow() is now possible on shmem-adopted topology.
+    This allows to share a topology between processes in different
+    Linux cgroups, etc.
   + XML format switches to 3.0 by default. Exporting to 2.x is
     possible with the new V2 XML export flag.
 
